lib/oopm/parsing/binary_operation.treetop
grammar BinaryOperation
  include Number
  include Whitespace

  rule binary_operation
    operand whitespace binary_operator whitespace operand
  end

  rule binary_operator
    ("+" / "-" / "*" / "/" / "%" / "||" / "&&" / "==" / "|" / "&")
  end
  
  rule operand
    number
  end
  
end
